--- a/.github/workflows/main_gusta-benna.yml
+++ b/.github/workflows/main_gusta-benna.yml
@@ -1,75 +1,135 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+
+
+
+
+
+          # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - gusta-benna
+
+
+name: Build and deploy Node.js app to Azure Web App - ictdatabaseapitwo
+
+
 
 on:
+
   push:
+
     branches:
+
       - main
+
   workflow_dispatch:
 
+
+
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
+
+
 
     steps:
+
       - uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
 
-      - name: Check if composer.json exists
-        id: check_files
-        uses: andstor/file-existence-action@v1
-        with:
-          files: 'composer.json'
 
-      - name: Run composer install if composer.json exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
+      - name: Set up Node.js version
+
+        uses: actions/setup-node@v3
+
+        with:
+
+          node-version: '18.x'
+
+
+
+      - name: npm install, build, and test
+
+        run: |
+
+          npm install
+
+          npm run build --if-present
+
+          npm run test --if-present
+
+
 
       - name: Zip artifact for deployment
+
         run: zip release.zip ./* -r
 
+
+
       - name: Upload artifact for deployment job
+
         uses: actions/upload-artifact@v3
+
         with:
-          name: php-app
+
+          name: node-app
+
           path: release.zip
 
+
+
   deploy:
+
     runs-on: ubuntu-latest
+
     needs: build
+
     environment:
-      name: 'Production'
+
+      name: 'production'
+
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     permissions:
       id-token: write #This is required for requesting the JWT
 
+
     steps:
+
       - name: Download artifact from build job
+
         uses: actions/download-artifact@v3
+
         with:
-          name: php-app
+
+          name: node-app
+
+
 
       - name: Unzip artifact for deployment
+
         run: unzip release.zip
+
       
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CA12FBDCDB2D46488303B7FEA95AC0B9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8C71DD5D261E45C48537E0904E16FAC3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D31F89FA708741728BFB34992157DB79 }}
+          client-id: ${{ secrets.__CA12FBDCDB2D46488303B7FEA95AC0B9__ }}
+          tenant-id: ${{ secrets.__8C71DD5D261E45C48537E0904E16FAC3__ }}
+          subscription-id: ${{ secrets.__D31F89FA708741728BFB34992157DB79__ }}
+
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
+
         id: deploy-to-webapp
+
+        uses: azure/webapps-deploy@v2
+
         with:
+
           app-name: 'gustabenna'
-          slot-name: 'Production' 
+
+          slot-name: 'Production'
+
           package: .
-          
